--- a/packages.html
+++ b/packages.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="col-lg-4 text-center text-lg-end">
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
-                    <a><small class="me-3 text-light"><i class="fa fa-sign-in-alt me-2"></i>WEBSITE WISATA SERAM BAGIAN BARAT</small></a>
+                    <a><small class="me-3 text-light"><i class="fa fa-sign-in-alt me-2"></i>WISATA SERAM BAGIAN BARAT</small></a>
                 <!-- Tambahkan tombol atau teks "Pilih Bahasa" di sini -->
                 <!-- Google Translate Dropdown -->
                 <div id="google_translate_element" class="ms-3"></div>        
