--- a/packages.html
+++ b/packages.html
@@ -249,7 +249,7 @@
                             <small class="text-uppercase">Pelabuhan Hunimua(liang)-Waipirit</small>
                             
                             <div style="text-align: justify;">
-                            <p class="mb-4">Bagi Para Pengunjung Wisata Yang Di Luar Pulau Seram Bagian Barat Dapat Menggunakan Transportasi Jalur Laut Melauli Kapal Feri Yang Berlokasi Di <b>Pelabuhan Hunimua</b> untuk Berkunjung Kewisata SBB.</p>
+                            <p class="mb-4">Pengunjung Wisata Yang Di Luar Pulau Seram Bagian Barat Dapat Menggunakan Transportasi Jalur Laut Melauli Kapal Feri Yang Berlokasi Di <b>Pelabuhan Hunimua</b> untuk Berkunjung Kewisata SBB.</p>
                         </div>
                         </div>
                         <div class="row bg-primary rounded-bottom mx-0">
