--- a/404.html
+++ b/404.html
@@ -68,7 +68,7 @@
         <!-- Navbar & Hero Start -->
         <div class="container-fluid position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
-                <a href="" class="navbar-brand p-0">
+                <a href="https://www.bing.com/mapbuilder/#background=Bing&disable_features=boundaries&map=8.00/-3.177/129.180"target="_blank" class="navbar-brand p-0">
                     <h1 class="m-0"><i class="fa fa-map-marker-alt me-3"></i>Wisata-SBB</h1>
                     <!-- <img src="img/logo.png" alt="Logo"> -->
                 </a>
