--- a/gallery.html
+++ b/gallery.html
@@ -142,7 +142,7 @@
                     
                     <li class="nav-item">
                         <a class="d-flex mx-3 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill" href="#GalleryTab-5">
-                            <span class="text-dark" style="width: 150px;">Oleh-Oleh khas Lokal</span>
+                            <span class="text-dark" style="width: 150px;">Oleh Oleh Khas Lokal</span>
                         </a>
                     </li>
                     
