--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
                 <div class="row g-5">
                     <div class="col-xl-5">
                         <div class="h-100">
-                            <img src="img/arfian 1.jpg" class="img-fluid w-100 h-100 rounded" alt="Image">
+                            <img src="img/kolase (2).png" class="img-fluid w-100 h-100 rounded" alt="Image">
                         </div>
                     </div>
                     <div class="col-xl-7">
@@ -152,8 +152,8 @@
                                             <div class="d-flex">
                                                 <div class="text-start my-auto">
                                                     <h5 class="text-white"><center>Latar Belakang</center></h5>
-                                                    <center><p class="text-white">Halo, nama saya Arfian Safitri Andi dari Prodi Sistem Informasi Institut Teknologi & Bisnis STIKOM AMBON. Saya membuat website ini sebagai bagian dari syarat tugas akhir saya. Selain itu, website ini bertujuan untuk menyediakan informasi lengkap dan mempromosikan destinasi wisata di Seram Bagian Barat yang masih belum banyak dijamah. Dengan adanya website ini, saya berharap dapat meningkatkan kesadaran tentang keindahan tersembunyi daerah ini, sekaligus membantu mengembangkan perekonomian masyarakat setempat melalui sektor pariwisata.</p></center>
-                                                    <h3 class="text-white"><center>Salam Hangatt Pejuang Toga!</center></h3>
+                                                    <center><p class="text-white">Website ini bertujuan untuk memperkenalkan keindahan alam dan budaya Seram Bagian Barat, meningkatkan pariwisata lokal dengan menyediakan informasi lengkap dan real-time, serta memudahkan wisatawan dalam merencanakan perjalanan melalui fitur pencarian suara dan peta interaktif. Selain itu, website ini juga mempromosikan wisata yang bertanggung jawab dan berkelanjutan, dengan menjadi panduan utama bagi para wisatawan.</p></center>
+                                                    
                                                 </div>
                                             </div>
                                         </div>
@@ -289,7 +289,11 @@
         </div>
         </div>
        <center><h2>Maps Seram Bagian Barat,Maluku</h2></center>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2040941.9532673769!2d126.88371791298535!3d-2.4353428822390812!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2d6ee2763701d131%3A0x1301329cdca51d67!2sKabupaten%20Seram%20Bagian%20Barat%2C%20Maluku!5e0!3m2!1sid!2sid!4v1717897745320!5m2!1sid!2sid" width="1260" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+       <div class="rounded">
+            <iframe class="rounded w-100" 
+            style="height: 450px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2040941.9532673769!2d126.88371791298535!3d-2.4353428822390812!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2d6ee2763701d131%3A0x1301329cdca51d67!2sKabupaten%20Seram%20Bagian%20Barat%2C%20Maluku!5e0!3m2!1sid!2sid!4v1717897745320!5m2!1sid!2sid" 
+            loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
         <!-- Volunteers End -->
          
 <!-- Testimonial Start -->
